--- a/evernote-frontend/index.html
+++ b/evernote-frontend/index.html
@@ -19,7 +19,7 @@
       div#footer p{margin:0;padding:5px 10px}
       /* div#container{width:700px;margin:0 auto} */
       div#note-show-page{float:right;width:80%}
-      div#note-side-bar{float:left;width:20%;}
+      div#note-side-bar{float:left;width:20%;height:100vh}
       div#extra{float:right;width:500px}
       div#footer{clear:both;width:100%}
     </style>
